fix project wrap

--- a/projects.css
+++ b/projects.css
@@ -88,7 +88,7 @@ nav {
 
 .projects {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
     padding: 2rem;
